--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img src="./images/sunny.png" alt="thousand sunny go" />
         </div>
         <div class="content-container">
-          <h1>Strawhat Luffy is the man who will The Pirates King</h1>
+          <h1>Strawhat Luffy is the man who will be The Pirates King</h1>
           <p>
             join strowhat Luffy and his craw searhing for the One Piece by
             wacthing the amine or reading the manga to enjoy the journy to the
@@ -53,10 +53,7 @@
             <button class="btn" type="submit">join us</button>
           </form>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde
-            veniam laboriosam voluptatum, temporibus ad voluptates? Aspernatur
-            repellat quas consequuntur ducimus tenetur error autem minus
-            nesciunt!
+            Lorem ipsum dolor sit amet, Unde veniam laboriosam voluptatum, temporibus ad voluptates?
           </p>
         </div>
       </section>
